# readchat2

./: .gitignore  Cargo.toml  README.md
etc/: adjectives.inc  animals.inc  ipsum.inc  join.inc  ready.inc  short_help.txt
src/: app.rs  colors.rs  config.rs  connect.rs  entry.rs  lib.rs  panic_logger.rs  simulated.rs  state.rs  testing.rs  twitch.rs  ui.rs
src/app/: find_view.rs
src/config/: badges.rs  color.rs  colors.rs  default.yaml  effects.rs  highlights.rs  keybinds.rs  style.rs  tabs.rs
src/entry/: badge.rs  user_cache.rs
src/ui/: highlights_view.rs  limited_list_view.rs  links_view.rs  main_screen.rs  messages_view.rs  on_view.rs  scroll.rs  spanned_appender.rs  status_view.rs  tab_bar.rs
src/ui/tab_bar/: tab.rs
