[package]
name    = "readchat2"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"
license = "UNLICENSE"

[dependencies]
anyhow     = "1.0.41"
backtrace  = "0.3.60"
chrono     = { version = "0.4.19", features = ["clock"], default-features = false }
cursive    = { version = "0.16.3", features = ["crossterm-backend"], default-features = false }
dirs       = "3.0.2"
fastrand   = "1.4.1"
flume      = { version = "0.10.7", features = ["select"], default-features = false }
once_cell  = "1.8.0"
pico-args  = "0.4.2"
serde      = { version = "1.0.126", features = ["derive"] }
toml       = { version = "0.5.8", features = ["preserve_order"] }
twitchchat = "0.14.8"
url        = "2.2.2"
